# exper_message_trait

./: .gitattributes  .gitignore  Cargo.toml  README.md  benchmarks.sh
benches/: .gitattributes  .gitignore  crit.rs
benches/results/: .rustc_info.json
benches/results/criterion/reports/: index.html
benches/results/criterion/reports/all/: index.html
benches/results/criterion/reports/all/enum_any/: index.html
benches/results/criterion/reports/all/enum_msgs/: index.html
benches/results/criterion/reports/all/separate_msgs_any/: index.html
benches/results/criterion/reports/all/string_msg/: index.html
benches/results/criterion/reports/all/string_split/: index.html
benches/results/criterion/reports/move/: index.html
benches/results/criterion/reports/move/enum_any/: index.html
benches/results/criterion/reports/move/enum_msgs/: index.html
benches/results/criterion/reports/move/separate_msgs_any/: index.html
benches/results/criterion/reports/move/string_msg/: index.html
benches/results/criterion/reports/move/string_split/: index.html
benches/results/criterion/reports/quit/: index.html
benches/results/criterion/reports/quit/enum_any/: index.html
benches/results/criterion/reports/quit/enum_msgs/: index.html
benches/results/criterion/reports/write/: index.html
examples/: README.md  chatgpt_code.md  chatgpt_code.rs
src/: lib.rs  main.rs  main.rs.enum.any.match  sm_enum_messages.rs  sm_enum_msgs.rs  sm_enum_msgs_any.rs  sm_individual_messages.rs  sm_individual_msgs_any.rs  sm_separate_msgs_any.rs  sm_string_msgs.rs
(+8 files in other folders)
