[package]
name = "exper_message_trait"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
criterion = "0.4.0"
crossbeam-channel = "0.5.6"

[[bench]]
name = "crit"
path = "benches/crit.rs"
harness = false
